# shournal

./: .gitignore  CMakeLists.txt  CMakeLists.txt.autosave  CMakeLists.txt.user.4.8-pre1  README-compile.md  README-shell-integration.md  README.md
cmake/: FindShournalUtil.cmake
html-export/: package.json  webpack.config.js
html-export/src/: annotation_line_render.js  command_list.js  command_manipulation.js  command_timeline.js  conversions.js  d3js_util.js  generic_text_dialog.js  globals.js  html_util.js  index.js  limited_queue.js  map_extended.js  plot_cmdcount_per_cwd.js  plot_cmdcount_per_session.js  plot_io_per_dir.js  plot_most_written_files.js  (+7 more)
install/: 90-shournaladd.rules.in  CMakeLists.txt  postinst-dkms.in  postinst.in  prerm-dkms.in  prerm.in  shournalk-load.conf
kernel/: CMakeLists.txt  Kbuild  dkms.conf.in  event_consumer.c  event_consumer.h  event_consumer_cache.c  event_consumer_cache.h  event_handler.c  event_handler.h  event_queue.c  event_queue.h  event_target.c  event_target.h  hash_table_str.c  hash_table_str.h  kfileextensions.c  kfileextensions.h  kpathtree.c  kpathtree.h  kutil.c  kutil.h  shournal_kio.c  shournal_kio.h  shournalk_global.c  shournalk_global.h  shournalk_main.c  shournalk_sysfs.c  shournalk_sysfs.h  shournalk_test.c  shournalk_test.h  shournalk_user.h  tracepoint_helper.c  tracepoint_helper.h  xxhash_shournalk.c  xxhash_shournalk.h
kernel/cmake/: FindKernelHeaders.cmake
shell-integration-scripts/: CMakeLists.txt  README.md  _common.sh.in  _source_me_generic.sh  integration_fan.bash  integration_fan.sh  integration_ko.sh  integration_ko.sh.in  integration_main.sh.in  util.sh
shell-integration-scripts/bash/: README.md  bash_integration.sh  integration_fan.bash  integration_ko.bash
src/: CMakeLists.txt
src/common/: CMakeLists.txt  app.cpp  app.h  cefd.cpp  cefd.h  cflock.cpp  cflock.h  cleanupresource.h  console_dialog.cpp  console_dialog.h  conversions.cpp  conversions.h  cpp_exit.cpp  cpp_exit.h  cxxhash.cpp  cxxhash.h  exccommon.cpp  exccommon.h  excqprocthrow.cpp  excqprocthrow.h  fdcommunication.cpp  fdcommunication.h  fileeventhandler.cpp  fileeventhandler.h  fileevents.cpp  fileevents.h  fileeventtypes.cpp  fileeventtypes.h  generic_container.h  groupcontrol.cpp  groupcontrol.h  hashcontrol.cpp  hashcontrol.h  hashmeta.cpp  hashmeta.h  idmapentry.h  interrupt_handler.cpp  interrupt_handler.h  limited_priority_queue.h  logger.cpp  (+44 more)
src/common/database/: command_query_iterator.cpp  command_query_iterator.h  commandinfo.cpp  commandinfo.h  compareoperator.cpp  compareoperator.h  db_connection.cpp  db_connection.h  db_controller.cpp  db_controller.h  db_conversions.cpp  db_conversions.h  db_globals.cpp  db_globals.h  file_query_helper.cpp  file_query_helper.h  fileinfos.cpp  fileinfos.h  insertifnotexist.cpp  insertifnotexist.h  qexcdatabase.cpp  qsqlquerythrow.cpp  qsqlquerythrow.h  query_columns.cpp  query_columns.h  sessioninfo.cpp  sessioninfo.h  sqlite_database_scheme.cpp  sqlite_database_scheme.h  sqlite_database_scheme_updates.cpp  sqlite_database_scheme_updates.h  sqlquery.cpp  sqlquery.h  storedfiles.cpp  storedfiles.h
src/common/oscpp/: CMakeLists.txt  cflock.cpp  cflock.h  excos.cpp  excos.h  fdentries.cpp  fdentries.h  os.cpp  os.h  oscaps.cpp  oscaps.h  osutil.cpp  osutil.h
src/common/qoptargparse/: CMakeLists.txt  excoptargparse.cpp  excoptargparse.h  qoptarg.cpp  qoptarg.h  qoptargparse.cpp  qoptargparse.h  qoptargtrigger.cpp  qoptargtrigger.h  qoptsqlarg.cpp  qoptsqlarg.h  qoptvarlenarg.cpp  qoptvarlenarg.h
src/common/qsimplecfg/: CMakeLists.txt  cfg.cpp  cfg.h  exccfg.cpp  exccfg.h  section.cpp  section.h
src/common/qsqlthrow/: CMakeLists.txt  qexcdatabase.cpp  qexcdatabase.h  qsqlquerythrow.cpp  qsqlquerythrow.h
src/common/util/: CMakeLists.txt  compareoperator.cpp  compareoperator.h  compat.h  exccommon.cpp  exccommon.h  nullable_value.h  qformattedstream.cpp  qoutstream.cpp  qoutstream.h  strlight.cpp  strlight_util.cpp  sys_ioprio.h  translation.cpp  translation.h  util.cpp  util.h
src/shell-integration/: CMakeLists.txt  attached_bash.cpp  attached_bash.h  attached_shell.cpp  attached_shell.h  event_open.cpp  event_open.h  event_other.cpp  event_process.cpp  libshournal-shellwatch.cpp  shell_globals.cpp  shell_globals.h  shell_logger.cpp  shell_logger.h  shell_request_handler.cpp
src/shell-integration-fanotify/: CMakeLists.txt  attached_bash.cpp  attached_bash.h  attached_shell.cpp  event_open.cpp  event_other.cpp  event_other.h  event_process.cpp  event_process.h  libshellwatch.version  libshournal-shellwatch.cpp  shell_globals.cpp  shell_globals.h  shell_logger.cpp  shell_logger.h  shell_request_handler.cpp  shell_request_handler.h
src/shournal/: CMakeLists.txt  argcontrol_dbdelete.cpp  argcontrol_dbdelete.h  argcontrol_dbquery.cpp  argcontrol_dbquery.h  cmd_stats.cpp  cmd_stats.h  command_printer.cpp  command_printer.h  command_printer_html.cpp  command_printer_html.h  command_printer_human.cpp  command_printer_human.h  command_printer_json.cpp  command_printer_json.h  pretty_print.cpp  pretty_print.h  shournal.cpp
src/shournal-run/: CMakeLists.txt  fanotify_controller.cpp  fanotify_controller.h  fifocom.cpp  fifocom.h  filewatcher.cpp  filewatcher.h  filewatcher_shournalk.cpp  filewatcher_shournalk.h  mark_helper.cpp  mark_helper.h  mount_controller.cpp  mount_controller.h  msenter.cpp  msenter.h  orig_mountspace_process.cpp  shournal-run.cpp  shournalk_ctrl.c  shournalk_ctrl.h
src/shournal-run-fanotify/: CMakeLists.txt  fanotify_controller.cpp  fanotify_controller.h  filewatcher_fan.cpp  filewatcher_fan.h  mount_controller.h  msenter.cpp  orig_mountspace_process.cpp  orig_mountspace_process.h  shournal-run-fanotify.cpp
test/: CMakeLists.txt  autotest.h  helper_for_test.cpp  helper_for_test.h  integration_test_shell.cpp  main.cpp  test_cfg.cpp  test_cxxhash.cpp  test_db_controller.cpp  test_fdcommunication.cpp  test_fileeventhandler.cpp  test_osutil.cpp  test_pathtree.cpp  test_qformattedstream.cpp  test_qoptargparse.cpp  test_util.cpp
test/sqlite_sample_db_v2_2/: database.db
