
add_subdirectory(util)
add_subdirectory(oscpp)
add_subdirectory(qoptargparse)
add_subdirectory(qsimplecfg)

SET(lib_shournal_common_files
    app
    cefd
    console_dialog
    cxxhash
    fdcommunication
    fileeventhandler
    fileevents
    generic_container
    groupcontrol
    hashcontrol
    hashmeta
    idmapentry
    interrupt_handler
    logger
    limited_priority_queue
    pidcontrol
    pathtree
    qfddummydevice
    qfilethrow
    qresource_helper
    settings
    shournal_run_common
    stdiocpp
    stupidinject
    socket_message
    subprocess
    user_kernerl.h
    xxhash_common.h
    xxhash_common.c
)

set(database_files
    database/db_connection
    database/db_controller
    database/sqlite_database_scheme
    database/commandinfo
    database/sessioninfo
    database/fileinfos
    database/sqlquery
    database/file_query_helper
    database/query_columns
    database/db_conversions
    database/sqlite_database_scheme_updates
    database/storedfiles
    database/db_globals
    database/command_query_iterator
    database/qexcdatabase
    database/qsqlquerythrow
)

add_library(lib_shournal_common
    ${lib_shournal_common_files}
    ${database_files}
)

target_link_libraries(lib_shournal_common PUBLIC
    Qt5::Core
    Qt5::Sql
    Qt5::Network
    xxhash
    uuid
    ${CMAKE_DL_LIBS}
    cap
    lib_util
    oscpp_lib
    lib_qoptargparse
    lib_qsimplecfg
)
