
add_subdirectory(util)
add_subdirectory(oscpp)
add_subdirectory(qoptargparse)
add_subdirectory(qsimplecfg)

SET(lib_shournal_common_files
    app.cpp
    cefd.cpp
    console_dialog.cpp
    cxxhash.cpp
    fdcommunication.cpp
    fileeventhandler.cpp
    fileevents.cpp
    generic_container.h
    groupcontrol.cpp
    hashcontrol.cpp
    hashmeta.cpp
    idmapentry.h
    interrupt_handler.cpp
    logger.cpp
    limited_priority_queue.h
    pidcontrol.cpp
    pathtree.cpp
    qfddummydevice.cpp
    qfilethrow.cpp
    qresource_helper.cpp
    safe_file_update.h
    settings.cpp
    shournal_run_common.cpp
    stdiocpp.cpp
    stupidinject.cpp
    socket_message.cpp
    subprocess.cpp
    user_kernerl.h
    xxhash_common.h
    xxhash_common.c
)

set(database_files
    database/db_connection.cpp
    database/db_controller.cpp
    database/sqlite_database_scheme.cpp
    database/commandinfo.cpp
    database/sessioninfo.cpp
    database/fileinfos.cpp
    database/sqlquery.cpp
    database/file_query_helper.cpp
    database/insertifnotexist.cpp
    database/query_columns.h
    database/db_conversions.cpp
    database/sqlite_database_scheme_updates.cpp
    database/storedfiles.cpp
    database/db_globals.cpp
    database/command_query_iterator.cpp
    database/qexcdatabase.cpp
    database/qsqlquerythrow.cpp
)

add_library(lib_shournal_common
    ${lib_shournal_common_files}
    ${database_files}
)

target_link_libraries(lib_shournal_common PUBLIC
    Qt5::Core
    Qt5::Sql
    Qt5::Network
    xxhash
    uuid
    ${CMAKE_DL_LIBS}
    cap
    lib_util
    oscpp_lib
    lib_qoptargparse
    lib_qsimplecfg
)
